# app/Http/Requests/Api/UpdateProfileRequest.php
@@ -22,7 +22,7 @@ class UpdateProfileRequest extends FormRequest
             'jenis_kelamin'         => ['nullable', 'in:L,P'],
             'pekerjaan'             => ['nullable', 'string', 'max:255'],
             'alamat'                => ['nullable', 'string', 'max:500'],
-            'desa'                  => ['nullable', 'string', 'max:255'],
+            'desa'                  => ['nullable', 'string', 'exists:desas,nama'],
             'rt'                    => ['nullable', 'string', 'max:10'],
             'rw'                    => ['nullable', 'string', 'max:10'],
             'foto_profil'           => ['nullable', 'image', 'mimes:jpg,jpeg,png', 'max:2048'],
