# app/Models/Desa.php
@@ -1,0 +1,13 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Desa extends Model
+{
+    protected $fillable = [
+        'nama',
+        'kecamatan',
+    ];
+}
